# gsuite-mcp

./: .gcloudignore  CLAUDE.md  Dockerfile  pyproject.toml
docs/: DEPLOYMENT.md  conversation-log.md
docs/plans/: 2026-04-10-gdrive-mcp-expansion-design.md  2026-04-10-gdrive-mcp-expansion.md
src/gdrive_mcp/: __main__.py  api_key_middleware.py  docs_ops.py  docx_edits.py  drive_ops.py  server.py  sheets_ops.py
src/gsuite_mcp/: __init__.py  __main__.py  api_key_middleware.py  auth.py  auth_setup.py  docx_edits.py  drive_ops.py  gmail_ops.py  retry.py  server.py  sheets_ops.py
tests/: test_api_key_middleware.py  test_append.py  test_auth.py  test_docx_edits.py  test_docx_suggest_edit.py  test_download.py  test_gmail_ops.py  test_manage_comments.py  test_metadata.py  test_replace_text.py  test_search.py  test_upload.py
