[project]
name = "gsuite-mcp"
version = "0.1.0"
description = "Google Drive, Docs, Sheets, and Gmail MCP server with append, replace, tracked-changes, comments, and draft support"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0.0",
    "google-api-python-client>=2.110.0",
    "google-auth>=2.25.0",
    "google-auth-oauthlib>=1.2.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gdrive_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
